# ml-pipeline-app

./: .gitignore  LICENSE  README.md  project.doc  requirements.txt
automl-pipeline/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
automl-pipeline/src/: App.tsx  index.css
automl-pipeline/src/components/: AlgorithmSelector.tsx  DatasetOverview.tsx  Layout.tsx  ThemeToggle.tsx  TrainingConfig.tsx  theme-provider.tsx
automl-pipeline/src/contexts/: ApiContext.tsx
automl-pipeline/src/lib/: utils.ts
automl-pipeline/src/pages/: Algorithm.tsx  Dashboard.tsx  DataSet.tsx  DeepLearning.tsx  Documentation.tsx  Home.tsx  NotFound.tsx  Results.tsx
automl-pipeline/src/services/: api.ts
backend/: app.py
backend/api/: endpoints.py  schemas.py
backend/core/: config.py
backend/models/: 798fdf64-40f7-44ff-bdaf-f1520410c0ba_RandomForestClassifier.joblib
backend/pipelines/: README.md  __init__.py  evaluation.py  explainability.py  ingestion.py  pyproject.toml  registry.py  training.py  transformation.py  validation.py
backend/utils/: file_handlers.py  model_export.py  visualization.py
